fix(www): smooth scroll / overflow

--- a/www/src/styles/app.scss
+++ b/www/src/styles/app.scss
@@ -96,7 +96,9 @@ body {
 		background-color 0.1s;
 
 	touch-action: pan-y;
+
 	overflow-x: hidden;
+	overflow-y: scroll;
 }
 
 *:focus-visible {
